--- a/style.css
+++ b/style.css
@@ -100,3 +100,39 @@ nav li a {
   border-radius: 48px;
 }
 
+.stats {
+  margin:60px 141px ;
+  text-align: center;
+  background-color: #dbdaf9;
+  border-radius: 24px;
+}
+
+.div-title{
+    padding: 30px 142px; 
+    font-size: 38px;
+    font-weight: bold;
+    color: #252432;
+    margin-bottom:24px;
+}
+
+.stats-grid {
+  padding: 0px 142px;  
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+.stat-box h2 {
+  margin-top: 0;
+  margin-bottom:4px;
+  font-size: 80px;
+  color: #4E47FF;
+  font-weight: bold;
+}
+
+.stat-box p {
+  margin-top: 0;
+  font-size: 20px;
+  color: #8987A1;
+}
